--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,7 +30,7 @@ footer{
 }
 .wrapper{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 30% 30%;
     justify-items: center;
     margin-top: 2em;
 }
