Add styling for button on the form

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,11 @@ footer{
     background-color: #2d3748;
     color: white;
 }
+.submitButton:active{
+    cursor: pointer;
+    background-color: white;
+    color: #2d3748;
+}
 .buttonWrapper{
     display: grid;
     grid-template-columns: 100%;
