Change color of active form button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,7 +76,7 @@ footer{
 }
 .submitButton:active{
     cursor: pointer;
-    background-color: white;
+    background-color: #f5c8b5;
     color: #2d3748;
 }
 .buttonWrapper{
